--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -67,57 +67,53 @@
             ]
         },
         {
-            "name": "Python 디버거: llava-next finetune code",
+            "name": "llava_stage_1.0_train debug",
             "type": "debugpy",
             "request": "launch",
             "module": "deepspeed.launcher.runner",
             "console": "integratedTerminal",
             "justMyCode": false,
             "args": [
-                "--num_gpus=1",
+                "--num_gpus=2",
                 "--master_port=10234",
-                "/root/workspace/train_code/llava_next_finetune.py",
-                "--output_dir=/root/output_dir",
-                "--run_name=llava-next",
-                "--cache_dir=/root/.cache/.llava_finetune_next_preprocess",
+                "/root/workspace/llava_stage_1.0_train.py",
+                "--output_dir=/root/output_dir/llava/stage-1",
+                "--run_name=llava-1.0",
+                "--cache_dir=/root/.cache/.llava_1_preprocess",
+                "--model_name_or_path=/root/output_dir/llava/KoLLaVA-7b",
                 "--cache_file_name=preprocessor.arrow",
                 "--preprocessing_batched=true",
-                "--model_name_or_path=/root/output_dir/Synatra7B-ClipLarge-LlavaNext",
-                "--preprocessing_num_workers=20",
-                "--preprocessing_batch_size=1000",
+                "--preprocessing_num_workers=2",
+                "--preprocessing_batch_size=2",
                 "--dataset_repo_ls",
-                "jp1924/OutsideKnowledgebasedMultimodalQAData",
+                "jp1924/KoLLaVAInsturct",
                 "--train_dataset_prefix=train",
-                "--valid_dataset_prefix=validation",
-                "--test_dataset_prefix=test",
-                "--per_device_train_batch_size=8",
-                "--gradient_accumulation_steps=32",
+                "--per_device_train_batch_size=16",
+                "--gradient_accumulation_steps=4",
                 "--per_device_eval_batch_size=2",
-                "--overwrite_cache=false",
                 "--num_train_epochs=1",
                 "--seed=42",
                 "--do_train=true",
-                "--do_eval=true",
+                "--do_eval=false",
                 "--do_predict=false",
-                "--split_valid=false",
-                "--valid_truncate_num=3000",
                 "--report_to=none",
-                "--wandb_code_log_dir=none",
                 "--learning_rate=1e-3",
                 "--lr_scheduler_type=cosine",
                 "--warmup_ratio=0.03",
                 "--weight_decay=0",
-                "--evaluation_strategy=steps",
                 "--save_strategy=steps",
-                "--eval_steps=5000",
-                "--save_steps=5000",
+                "--eval_steps=1000",
+                "--eval_strategy=no",
+                "--save_steps=1000",
                 "--logging_strategy=steps",
                 "--logging_steps=1",
                 "--bf16=true",
-                "--gradient_checkpointing=true",
                 "--tf32=true",
-                "--group_by_length=true",
-                "--deepspeed=/root/workspace/ZeRO_2_act_check.json"
+                "--use_liger_kernel=false",
+                "--gradient_checkpointing=true",
+                "--gradient_checkpointing_kwargs={\"use_reentrant\": false}",
+                "--group_by_length=false",
+                "--deepspeed=/root/workspace/ds_config/ZeRO_2_act_check.json",
             ]
         }
     ]
